--- a/CPlusPlusPractice.vcxproj
+++ b/CPlusPlusPractice.vcxproj
@@ -128,6 +128,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Templates\TemplatePracEasy.h" />
+    <ClInclude Include="Templates\TemplatePracIntermediate.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
