--- a/CPlusPlusPractice.vcxproj.filters
+++ b/CPlusPlusPractice.vcxproj.filters
@@ -23,5 +23,8 @@
     <ClInclude Include="Templates\TemplatePracEasy.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Templates\TemplatePracIntermediate.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
