--- a/CPlusPlusPractice.vcxproj.filters
+++ b/CPlusPlusPractice.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="Templates\TemplatePracIntermediate.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Templates\TemplatePracHard.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
